# lam

./: .gitignore  README.md  TRAINING.md  pyproject.toml  train.py  train_bc.py
LATENT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
conf/: bc_config.yaml  config.yaml
conf/hydra/launcher/: slurm.yaml
latent_mj/: __init__.py  constant.py  utils.py
latent_mj/app/: brax2onnx_tracking.py  mj_playground_init.py
latent_mj/dr/: domain_randomize_tracking.py
latent_mj/envs/: __init__.py
latent_mj/envs/g1_tracking/: __init__.py  g1_tracking_constants_tennis.py
latent_mj/envs/g1_tracking/play/: play_g1_env_tracking_tennis.py
latent_mj/envs/g1_tracking/train/: base_env.py  g1_env_tracking_tennis.py  g1_env_tracking_tennis_dr.py
latent_mj/envs/g1_tracking/utils/: wrapper.py
latent_mj/envs/molmobot_manipulation/: __init__.py  constants.py
latent_mj/envs/molmobot_manipulation/train/: __init__.py  base_env.py  episode_loader.py  molmobot_data_loader.py  molmobot_tracking_env.py  molmobot_traj_loader.py  pick_env.py  (+1 more)
latent_mj/eval/tracking/: brax2onnx.py  mj_onnx_video.py
latent_mj/learning/policy/: acting.py
latent_mj/learning/train/: train_bc_molmobot.py  train_ppo_track_molmobot.py  train_ppo_track_tennis.py
latent_mj/utils/: jax_compat.py  logger.py  math.py  math_np.py  mujoco.py  registry.py
latent_mj/utils/dataset/: molmobot_hf_stream.py  start_end_transition_handler.py  traj_class.py  traj_handler.py  traj_process.py
scripts/: count_unique_meshes.py  render_molmobot_rollout.py  setup_cluster.sh  smoke_test_molmobot.py  smoke_test_molmobot_data.py  smoke_test_molmobot_episode.py  smoke_test_molmobot_tracking.py
scripts/process_motion/: preprocess_motion.py
(+3 files in other folders)
